# alize-core

./: autogen.sh  configure.ac
include/: Exception.h
src/: Exception.cpp  alizeString.cpp
